# capnpython

./: README.md  pyproject.toml  requirements.txt
capnpython/compiler/: compile.py
capnpython/templates/: module.py.j2
examples/: addressbook.capnp
